--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "husky": "^0.14.3",
     "jest": "23.6.0",
     "lint-staged": "7.2.2",
+    "merge": "^1.2.1",
     "mock-async-storage": "^2.0.3",
     "prettier": "^1.14.2",
     "react-native-testing-library": "^1.5.0",
